aws/Deployment/Cloudformation/BPS-VE-FullDeployment/AWS-2-Arm-Demo-Use-Case.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "BPS on AWS 2-Arm Test CloudFormation",
	"Parameters" : {
		"UserEmailTag" : {
			"Description" : "Email address tag of user creating the stack",
			"MinLength": "14",
			"Type" : "String",
			"Default" : "test@keysight.com"
		},
		"UserLoginTag" : {
			"Description" : "Login ID tag of user creating the stack",
			"MinLength": "4",
			"Type" : "String",
			"Default" : "ixia"
		},
		"SSHKey": {
			"Description": "Name of an existing EC2 KeyPair to enable SSH access",
			"Type": "AWS::EC2::KeyPair::KeyName",
			"Default": "your-own-ssh-key"
		},	  
		"BPSvBladeInstanceType" : {
			"Description" : "Instance type of BPS-VE Virtual Blade VM",
			"Type" : "String",
			"AllowedValues": [
				"c6in.4xlarge",
				"c5n.4xlarge",
				"c5.4xlarge"
			],
			"Default" : "c5.4xlarge"
		},
		"InboundIPv4CidrBlock" : {
			"AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x.",
			"Description" : "IP Address /32 or IP CIDR range connecting inbound to BPS-VE VMs",
			"MaxLength": "18",
			"MinLength": "9",
			"Type" : "String",
			"Default" : "213.249.122.234/32"
		}
    },
	"Mappings" : {
		"VariableMap" : {
			"local" : {
				"OPTIONSxTAG" : "MANUAL",
				"PROJECTxTAG" : "bpsve",
				"VPCxCIDRxBLOCK" : "10.0.0.0/16",
				"VPCxINSTANCExTENANCY" : "default",
				"VPCxENABLExDNSxSUPPORT" : true,
				"VPCxENABLExDNSxHOSTNAMES" : true,
				"PLACEMENTxGROUPxSTRATEGY" : "cluster",
				"FLOWxLOGxRESOURCExTYPE" : "VPC",
				"FLOWxLOGxTRAFFICxTYPE" : "REJECT",
				"SUBNETxAVAILABILITYxZONExINDEX" : "0",
				"CTRLxSUBNETxCIDRxBLOCK" : "10.0.1.0/24",
				"TEST1xSUBNETxCIDRxBLOCK" : "10.0.4.0/24",
				"TEST2xSUBNETxCIDRxBLOCK" : "10.0.5.0/24",
				"INTERFACExSOURCExDESTxCHECK" : true,
				"INSTANCExDISABLExAPIxTERMINATION" : false,
				"INSTANCExMONITORING" : false,
				"INSTANCExINSTANCExINITIATEDxSHUTDOWNxBEHAVIOR" : "stop",
				"INSTANCExBLOCKxDEVICExNAME" : "/dev/sda1",
				"INSTANCExEBSxDELETExONxTERMINATION" : true,
				"INSTANCExEBSxVOLUMExTYPE" : "gp2",
				"APPxTAG" : "BPS",
				"APPxVERSION" : "26.1.0",
				"VBLADExIMGxSIZE" : "10",
				"VBLADE1xETH0xPRIVATExIPxADDRESS" : "10.0.1.11",
				"VBLADE1xETH1xPRIVATExIPxADDRESSES" : "10.0.4.12|10.0.4.13|10.0.4.14|10.0.4.15|10.0.4.16|10.0.4.17|10.0.4.18|10.0.4.19|10.0.4.20|10.0.4.21",
				"VBLADE1xETH2xPRIVATExIPxADDRESSES" : "10.0.5.12|10.0.5.13|10.0.5.14|10.0.5.15|10.0.5.16|10.0.5.17|10.0.5.18|10.0.5.19|10.0.5.20|10.0.5.21"
			}
		}
	},
	"Resources": {
		"PlacementGroup": {
			"Type" : "AWS::EC2::PlacementGroup",
			"Properties" : {
				"Strategy" : { "Fn::FindInMap" : [ "VariableMap", "local", "PLACEMENTxGROUPxSTRATEGY"] }
			}
		},
		"Vpc": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": { "Fn::FindInMap" : [ "VariableMap", "local", "VPCxCIDRxBLOCK"] },
				"InstanceTenancy": { "Fn::FindInMap" : [ "VariableMap", "local", "VPCxINSTANCExTENANCY"] },
				"EnableDnsSupport": { "Fn::FindInMap" : [ "VariableMap", "local", "VPCxENABLExDNSxSUPPORT"] },
				"EnableDnsHostnames": { "Fn::FindInMap" : [ "VariableMap", "local", "VPCxENABLExDNSxHOSTNAMES"] },
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "VPC", 
							{ "Ref" : "AWS::Region" } ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"VpcFlowLog" : {
			"Type" : "AWS::EC2::FlowLog",
			"Properties" : {
				"DeliverLogsPermissionArn" : { "Fn::GetAtt" : ["VPCFlowLogAccessRole", "Arn"] },
				"LogGroupName" : { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "VPC_FLOW_LOG", 
							{ "Ref" : "AWS::Region" } ] ] },
				"ResourceId" : { "Ref" : "Vpc" },
				"ResourceType" : { "Fn::FindInMap" : [ "VariableMap", "local", "FLOWxLOGxRESOURCExTYPE"] },
				"TrafficType" : { "Fn::FindInMap" : [ "VariableMap", "local", "FLOWxLOGxTRAFFICxTYPE"] }
			}
		},
		"CtrlSubnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": { "Fn::Select" : [ { "Fn::FindInMap" : [ "VariableMap", "local", "SUBNETxAVAILABILITYxZONExINDEX"] }, { "Fn::GetAZs" : { "Ref" : "AWS::Region" } } ] },
				"CidrBlock": { "Fn::FindInMap" : [ "VariableMap", "local", "CTRLxSUBNETxCIDRxBLOCK"] },
				"VpcId": {
					"Ref": "Vpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "CTRL_SUBNET", 
							{ "Ref" : "AWS::Region" } ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"Test1Subnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": { "Fn::Select" : [ { "Fn::FindInMap" : [ "VariableMap", "local", "SUBNETxAVAILABILITYxZONExINDEX"] }, { "Fn::GetAZs" : { "Ref" : "AWS::Region" } } ] },
				"CidrBlock": { "Fn::FindInMap" : [ "VariableMap", "local", "TEST1xSUBNETxCIDRxBLOCK"] },
				"VpcId": {
					"Ref": "Vpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "TEST1_SUBNET", 
							{ "Ref" : "AWS::Region" } ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
  		"Test2Subnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": { "Fn::Select" : [ { "Fn::FindInMap" : [ "VariableMap", "local", "SUBNETxAVAILABILITYxZONExINDEX"] }, { "Fn::GetAZs" : { "Ref" : "AWS::Region" } } ] },
				"CidrBlock": { "Fn::FindInMap" : [ "VariableMap", "local", "TEST2xSUBNETxCIDRxBLOCK"] },
				"VpcId": {
					"Ref": "Vpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "TEST2_SUBNET", 
							{ "Ref" : "AWS::Region" } ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
        "CtrlSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "CTRL_SECURITY_GROUP", 
					{ "Ref" : "AWS::Region" } ] ] },
				"VpcId": {
                    "Ref": "Vpc"
                },
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "CTRL_SECURITY_GROUP", 
							{ "Ref" : "AWS::Region" } ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"CtrlIngress1": {
		  "Type": "AWS::EC2::SecurityGroupIngress",
		  "Properties": {
			"GroupId": {
			  "Ref": "CtrlSecurityGroup"
			},
			"IpProtocol": "-1",
			"SourceSecurityGroupId": {
			  "Ref": "CtrlSecurityGroup"
			}
		  }
		},
		"CtrlIngress2": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "CtrlSecurityGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": 22,
				"ToPort": 22,
				"CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
		},
		"CtrlIngress22": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "CtrlSecurityGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": 22,
				"ToPort": 22,
				"CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
		},		
		"CtrlIngress8887": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "CtrlSecurityGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": 8887,
				"ToPort": 8887,
				"CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
		},
		"CtrlIngress8889": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "CtrlSecurityGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": 8889,
				"ToPort": 8939,
				"CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
		},
		"CtrlIngress8943": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "CtrlSecurityGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": 8943,
				"ToPort": 8945,
				"CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
		},		
        "Test1SecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "TEST1_SECURITY_GROUP", 
					{ "Ref" : "AWS::Region" } ] ] },
                "VpcId": {
                    "Ref": "Vpc"
                },
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "TEST1_SECURITY_GROUP", 
							{ "Ref" : "AWS::Region" } ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"Test1Ingress1": {
		  "Type": "AWS::EC2::SecurityGroupIngress",
		  "Properties": {
			"GroupId": {
			  "Ref": "Test1SecurityGroup"
			},
			"IpProtocol": "-1",
			"SourceSecurityGroupId": {
			  "Ref": "Test1SecurityGroup"
			}
		  }
		},
		"InternetGw": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "INTERNET_GW", 
							{ "Ref" : "AWS::Region" } ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"GwAttach": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {
					"Ref": "Vpc"
				},
				"InternetGatewayId": {
					"Ref": "InternetGw"
				}
			}
		},
		"CtrlRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "Vpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "CTRL_ROUTE_TABLE", 
							{ "Ref" : "AWS::Region" } ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"Test1RouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "Vpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "TEST1_ROUTE_TABLE", 
							{ "Ref" : "AWS::Region" } ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"CtrlSubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "CtrlRouteTable"
				},
				"SubnetId": {
					"Ref": "CtrlSubnet"
				}
			}
		},
		"Test1SubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "Test1RouteTable"
				},
				"SubnetId": {
					"Ref": "Test1Subnet"
				}
			}
		},
		"Test2SubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "Test1RouteTable"
				},
				"SubnetId": {
					"Ref": "Test2Subnet"
				}
			}
		},
		"BpsVirtualBlade1Eth0": {
			"Type": "AWS::EC2::NetworkInterface",
			"Properties": {
				"Description": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, 
					{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxTAG"] }, "VIRTUAL_BLADE1", 
					{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxVERSION"] }, "ETH0", 
					{ "Ref" : "AWS::Region" } ] ] },
				"SourceDestCheck": { "Fn::FindInMap" : [ "VariableMap", "local", "INTERFACExSOURCExDESTxCHECK"] },
				"SubnetId": {
					"Ref": "CtrlSubnet"
				},
				"GroupSet": [
					{
						"Ref": "CtrlSecurityGroup"
					}
				],
				"PrivateIpAddress": { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH0xPRIVATExIPxADDRESS" ] },
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, 
							{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxTAG"] }, "VIRTUAL_BLADE1", 
							{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxVERSION"] }, "ETH0", 
							{ "Ref" : "AWS::Region" } ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"BpsVirtualBlade1Eth1": {
			"Type": "AWS::EC2::NetworkInterface",
			"Properties": {
				"Description": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, 
					{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxTAG"] }, "VIRTUAL_BLADE1", 
					{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxVERSION"] }, "ETH1", 
					{ "Ref" : "AWS::Region" } ] ] },
				"SourceDestCheck": { "Fn::FindInMap" : [ "VariableMap", "local", "INTERFACExSOURCExDESTxCHECK"] },
				"SubnetId": {
					"Ref": "Test1Subnet"
				},
				"GroupSet": [
					{
						"Ref": "Test1SecurityGroup"
					}
				],
				"PrivateIpAddress": { "Fn::Select" : [ "0", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
				"PrivateIpAddresses": [
					{
						"PrivateIpAddress": { "Fn::Select" : [ "1", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "2", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "3", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "4", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "5", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "6", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "7", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "8", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "9", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					}
				],
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, 
							{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxTAG"] }, "VIRTUAL_BLADE1", 
							{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxVERSION"] }, "ETH1", 
							{ "Ref" : "AWS::Region" } ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"BpsVirtualBlade1Eth2": {
			"Type": "AWS::EC2::NetworkInterface",
			"Properties": {
				"Description": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, 
					{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxTAG"] }, "VIRTUAL_BLADE1", 
					{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxVERSION"] }, "ETH2", 
					{ "Ref" : "AWS::Region" } ] ] },
				"SourceDestCheck": { "Fn::FindInMap" : [ "VariableMap", "local", "INTERFACExSOURCExDESTxCHECK"] },
				"SubnetId": {
					"Ref": "Test2Subnet"
				},
				"GroupSet": [
					{
						"Ref": "Test1SecurityGroup"
					}
				],
				"PrivateIpAddress": { "Fn::Select" : [ "0", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
				"PrivateIpAddresses": [
					{
						"PrivateIpAddress": { "Fn::Select" : [ "1", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "2", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "3", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "4", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "5", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "6", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "7", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "8", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "9", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					}
				],
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, 
							{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxTAG"] }, "VIRTUAL_BLADE1", 
							{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxVERSION"] }, "ETH2", 
							{ "Ref" : "AWS::Region" } ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"BpsVirtualBlade1": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"DisableApiTermination": { "Fn::FindInMap" : [ "VariableMap", "local", "INSTANCExDISABLExAPIxTERMINATION"] },
				"InstanceInitiatedShutdownBehavior": { "Fn::FindInMap" : [ "VariableMap", "local", "INSTANCExINSTANCExINITIATEDxSHUTDOWNxBEHAVIOR"] },
                "ImageId": "resolve:ssm:/aws/service/marketplace/prod-cl7jzjvfgu32i/26.1.0",
				"InstanceType": { "Ref" : "BPSvBladeInstanceType" },
				"KeyName": {"Ref": "SSHKey"},
				"Monitoring": { "Fn::FindInMap" : [ "VariableMap", "local", "INSTANCExMONITORING"] },
				"PlacementGroupName" : { "Ref" : "PlacementGroup" },
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, 
							{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxTAG"] }, "VIRTUAL_BLADE1", 
							{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxVERSION"] }, 
							{ "Ref" : "AWS::Region" } ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				],
				"NetworkInterfaces": [
					{
						"NetworkInterfaceId": {
							"Ref": "BpsVirtualBlade1Eth0"
						},
						"DeviceIndex": "0"
					},
					{
						"NetworkInterfaceId": {
							"Ref": "BpsVirtualBlade1Eth1"
						},
						"DeviceIndex": "1"
					},
					{
						"NetworkInterfaceId": {
							"Ref": "BpsVirtualBlade1Eth2"
						},
						"DeviceIndex": "2"
					}
				],
				"BlockDeviceMappings" : [
					{
						"DeviceName" : { "Fn::FindInMap" : [ "VariableMap", "local", "INSTANCExBLOCKxDEVICExNAME"] },
						"Ebs" : { 
							"VolumeSize": { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADExIMGxSIZE"] },
							"DeleteOnTermination" : { "Fn::FindInMap" : [ "VariableMap", "local", "INSTANCExEBSxDELETExONxTERMINATION"] },
							"VolumeType" : { "Fn::FindInMap" : [ "VariableMap", "local", "INSTANCExEBSxVOLUMExTYPE"] }
						}
					}
				]
			}
		},
		"VPCFlowLogAccessRole": {
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Statement": [
                        {
                            "Action": "sts:AssumeRole",
                            "Effect": "Allow",
                            "Principal": {
                                "Service": "vpc-flow-logs.amazonaws.com"
                            }
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "ManagedPolicyArns": [
                    "arn:aws:iam::aws:policy/CloudWatchLogsFullAccess"
                ],
                "Path": "/"
            },
            "Type": "AWS::IAM::Role"
        }
	},
	"Metadata" : {
		"AWS::CloudFormation::Interface" : {	
            "ParameterGroups": [
                {
                    "Label": {
                        "default": "User Tag Configuration"
                    },
                    "Parameters": [
                        "UserEmailTag",
						"UserLoginTag"
                    ]
                },
                {
                    "Label": {
                        "default": "Keysight BPS-VE Instance Configuration"
                    },
                    "Parameters": [
                        "SSHKey"
                    ]
                },
                {
                    "Label": {
                        "default": "BreakingPoint Virtual Blade Instance Configuration"
                    },
                    "Parameters": [
                        "BPSvBladeInstanceType"
                    ]
                },
                {
                    "Label": {
                        "default": "Security Group Configuration"
                    },
                    "Parameters": [
                        "InboundIPv4CidrBlock"
                    ]
                }				
			],
			"ParameterLabels": {
				"UserEmailTag": {
					"default": "User Email Tag"
				},
				"UserLoginTag": {
					"default": "User Login Tag"
				},
				"BPSvBladeInstanceType": {
					"default": "Virtual Blade Instance Type"
				},
                "SSHKey": {
                    "default": "Keysight BPS-VE SSH Key"
                },
				"InboundIPv4CidrBlock": {
					"default": "Inbound IPv4 CIDR Block"
				}
			}
        }
    },
	"Outputs": {
		"BpsVirtualBlade1": {
			"Description": "KEY_BPS_VIRTUAL_BLADE1_PRIVATE_IP",
			"Value": {
				"Fn::GetAtt": [
					"BpsVirtualBlade1",
					"PrivateIp"
				]
			}
		}
	}
}
